# gnss_ephemeris

./: .gitignore  AGENTS.md  README.md  pyproject.toml  task.md
data/: 000A0070.20n  gths135a.18f  pt.16c
reports/: phase1_rinex_parser_spec.md  phase2_gps_eph2pos_spec.md  phase3_bds_eph2pos_spec.md  phase5_ocp_refactor_spec.md
src/gnss_ephemeris/: __init__.py  cli.py
src/gnss_ephemeris/ephemeris/: __init__.py  bds.py  gps.py
src/gnss_ephemeris/rinex/: __init__.py  models.py  parser.py
src/gnss_ephemeris/utils/: __init__.py  constants.py  fortran.py  kepler.py  time.py
tests/: test_ephemeris.py  test_registry.py  test_rinex.py  test_utils.py
tests/mvps/: __init__.py  bds_eph2pos_mvp.py  gps_eph2pos_mvp.py  rinex_parser_mvp.py  verify_rtklib.c
