[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gnss-ephemeris"
version = "0.1.0"
description = "GNSS 广播星历解析与卫星瞬时位置/钟差解算"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = ""}
]
keywords = ["GNSS", "RINEX", "ephemeris", "GPS", "BDS"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
# 纯标准库实现，无运行时依赖
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
gnss-eph = "gnss_ephemeris.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
